<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ModeChoiceActivity">

    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
              android:padding="10dp"
              android:textSize="32sp"
    android:text="@string/mode_choice" android:gravity="center"/>
    <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="horizontal">
        <android.support.constraint.ConstraintLayout android:layout_width="match_parent" android:layout_weight="1"
                                                             android:layout_height="match_parent">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:textSize="24sp"
                  android:gravity="center"
                  android:text="@string/watcher"
                  app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintHorizontal_bias="0.499" android:layout_marginBottom="8dp"
                  app:layout_constraintBottom_toTopOf="@+id/fabWatcherMode"/>
            <android.support.design.widget.FloatingActionButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true" app:srcCompat="@drawable/ic_ondemand_video_black_24dp"
                    android:id="@+id/fabWatcherMode" app:fabSize="normal"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                    app:backgroundTint="@color/red"/>
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout android:layout_width="match_parent" android:layout_weight="1"
                                                     android:layout_height="match_parent">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:textSize="24sp"
                      android:gravity="center"
                      android:text="@string/camera"
                      app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                      app:layout_constraintHorizontal_bias="0.499" android:layout_marginBottom="8dp"
                      app:layout_constraintBottom_toTopOf="@+id/fabCameraMode"/>
            <android.support.design.widget.FloatingActionButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true" app:srcCompat="@drawable/ic_videocam_black_24dp"
                    android:id="@+id/fabCameraMode" app:fabSize="normal"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                    app:backgroundTint="@color/green"/>
        </android.support.constraint.ConstraintLayout>


    <android.support.constraint.ConstraintLayout android:layout_width="match_parent" android:layout_weight="1"
                                                 android:layout_height="match_parent">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:textSize="24sp"
                  android:gravity="center"
                  android:text="@string/hand"
                  app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintHorizontal_bias="0.499" android:layout_marginBottom="8dp"
                  app:layout_constraintBottom_toTopOf="@+id/fabHandsMode"/>
        <android.support.design.widget.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true" app:srcCompat="@drawable/ic_accessibility_black_24dp"
                android:id="@+id/fabHandsMode" app:fabSize="normal"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                app:backgroundTint="@color/blue"/>
    </android.support.constraint.ConstraintLayout>
    </LinearLayout>
</LinearLayout>